<resources>
    <string name="app_name">DemoAudioWaveView</string>
    <string name="choose_audio">Choose audio</string>
    <string name="loading">Loading</string>
    <string name="change_mode">Change Mode</string>
    <string name="current_mode_preview">Current Mode: None</string>
    <string name="current_mode_progress">Current Mode Progress: Flexible</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="apply_range">Apply range</string>
    <string name="progress">Progress</string>
    <string name="set_range">Set range</string>
    <string name="set_progress">Set progress</string>
    <string name="change_progress_mode">Change progress mode</string>
</resources>