<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.lhd.audiowave.AudioWaveView
        android:id="@+id/audioView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:awv_background_color="#edecfb"
        app:awv_bar_audio_height="120dp"
        app:awv_max_progress="90"
        app:awv_min_progress="10"
        app:awv_min_range_progress="0000"
        app:awv_mode_edit="none"
        app:awv_text_timeline_padding_with_bar="4dp"
        app:awv_thumb_edit_align="top"
        app:awv_thumb_edit_height="140dp"
        app:awv_thumb_edit_left_anchor_align_horizontal="right"
        app:awv_thumb_edit_left_anchor_align_vertical="bottom"
        app:awv_thumb_edit_left_anchor_image="@drawable/ic_anchor_left_cut"
        app:awv_thumb_edit_right_anchor_align_horizontal="left"
        app:awv_thumb_edit_right_anchor_image="@drawable/ic_anchor_right_cut"
        app:awv_thumb_edit_text_value_position="bottom_of_anchor"
        app:awv_thumb_edit_text_value_size="9sp"
        app:awv_thumb_min_space_between_text="10dp"
        app:awv_thumb_progress_mode="flexible_mode"
        app:awv_thumb_progress_static_position="center"
        app:awv_wave_color="#c3c2f1"
        app:awv_wave_line_padding="2dp"
        app:awv_wave_zoom_level_auto="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/audioView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chooseAudio"
                android:text="@string/choose_audio" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#ccc" />

            <TextView
                android:id="@+id/tvMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/current_mode_preview"
                android:textColor="#f00" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="changeMode"
                android:text="@string/change_mode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audioView" />

            <TextView
                android:id="@+id/tvProgressMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/current_mode_progress"
                android:textColor="#f0f" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="changeProgressMode"
                android:text="@string/change_progress_mode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audioView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#ccc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/set_range"
                android:textColor="#0f0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtMin"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:hint="@string/min"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/edtMax"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/max"
                    android:textColor="#000" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="applyRange"
                android:text="@string/apply_range"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audioView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#ccc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:text="@string/set_progress"
                android:textColor="#00f" />

            <EditText
                android:id="@+id/edtProgress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/progress" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setProgress"
                android:text="@string/set_progress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/audioView" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#ccc" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9000"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:elevation="4dp"
        tools:ignore="UnusedAttribute">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="#fff" />

        <TextView
            android:id="@+id/tvLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="#fff" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>